--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,13 @@ server.servlet.context-path=/api/microservicio-notas-referencia
 
 # spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
+# spring.datasource.url=jdbc:mysql://gestion-consultas-pg-db-instance-1.cygv6w0v8ska.us-east-1.rds.amazonaws.com:${PORT:3306}/${DATABASE:gestion_consultas_externas}
+# spring.datasource.username=root
+# spring.datasource.password=Admin060400
+# spring.datasource.show-sql=true
 spring.datasource.url=jdbc:mysql://${IP:localhost}:${PORT:3306}/${DATABASE:gestion-consultas-externas}
 spring.datasource.username=root
 spring.datasource.password=${PASSWORD:admin}
 spring.datasource.show-sql=true
-
 # server.port=8090
 server.port=8094
